improve logo display and fix alignment on webkit

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -78,12 +78,13 @@ a.navbar__home {
 }
 
 .navbar__gouvfr {
-  height: 20px;
+  height: 100%;
 }
 
 span.navbar__domain {
   font-weight: 400;
   color: var(--theme-dark-text);
+  -webkit-padding-after: 3px; /* fix the broken line-height in logo */
 }
 
 @media (--smaller-than-tablet) {
